<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistics">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Statistics"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="         "
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Game Score Statistics"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="219dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Game #"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView99"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Score"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView100"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Reset Times"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView101"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Word"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="handleClick"
                    android:text="#1 - view setting"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="handleClick"
                    android:text="#2- view setting" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="handleClick"
                    android:text="#3 - view setting" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="handleClick"
                    android:text="#4 - view setting" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Setting Used:"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Minutes:" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  " />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Size:" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  " />
        </LinearLayout>

        <TextView
            android:id="@+id/placeHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Word Statistics"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView104"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Word"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView105"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Used"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/word1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="first"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/word10"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/word2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="second"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/word20"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/word3"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="third"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/word30"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="16sp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>